issue fix
webpage is not responsive

--- a/css/style.css
+++ b/css/style.css
@@ -123,7 +123,7 @@ background-color: #2d3334;
 
 }
 .testimonial .icon:after{
-	<!-- content: "";-->
+	content: "";
 	position: absolute;
 	width: 80px;
 	height: 80px;
@@ -207,12 +207,10 @@ bottom: -4px;
 background: #ef4251;
 }
 .imac{
-
 position: relative;
-margin-top: 30px;	
+margin-top: -40px;	
 }
 .imac img{
-	border-radius: 25px;
 	width: 100%;
 }
 
@@ -386,18 +384,10 @@ padding-top: 10px;
 	color: #636363;
 	text-transform: uppercase;
 }
-/* start google map */
-#map-canvas
-  {
-    border: none;
-    width: 100%;
-    height: 320px;
-  }
-/* end google map */
+
 
 
 /*Footer*/
-
 footer{
 	background-color: #f1f1f1;
 	padding-top: 50px;
